<resources>
    <string name="app_name">Equipos Argentinos</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title">Equipos Argentinos</string>
    <string name="logout">Logout</string>
    <string name="equipos_argentinos">Equipos Argentinos</string>
    <string name="volver">Volver</string>
    <string name="toca_aqui_para_acceder_a_la_pagina_web">Toca aqui para acceder a la pagina web</string>
    <string name="nombre_del_estadio">Estadio %s</string>
    <string name="escudo_del_equipo">Escudo del equipo</string>
    <string name="stadium_location">Queda en: %s</string>
    <string name="stadium_cap">Capacidad %s personas</string>
    <string name="stadium_image">Stadium image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="fav_list">Fav List</string>
    <string name="search">Search</string>
    <string name="search_hint">Busca un equipo</string>
    <string name="no_tienes_favoritos">No tienes favoritos...</string>
</resources>